# Desafio-Urbano-Vitalino-

./: .travis.yml  Pipfile  README.md  github-actions.yml  pyproject.toml  requirements.txt
desafio/desafio/: settings.py
desafio/processos/: models.py
